--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^1.0.6",
     "@next/bundle-analyzer": "^12.3.1",
     "@tanstack/react-query": "^4.0.10",
+    "ahooks": "^3.7.1",
     "axios": "^0.27.2",
     "clsx": "^1.2.1",
     "next": "12.2.4",
@@ -20,7 +21,8 @@
     "next-translate": "^1.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
